mock data jt and rename function
